<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:edcollection="http://schemas.android.com/apk/res/com.winway.android.edcollection"
    android:id="@+id/rl_dlsd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.winway.android.edcollection.base.widgets.HeadComponent
            android:id="@+id/hc_dlsd_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            edcollection:headTitle="@string/dlsd_title"
            edcollection:isShowOk="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/white"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ll_dlgd_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical" >

                    <include layout="@layout/layout_channel_comment" />

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_sdbh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input_hint"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_sdbh" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_ywdw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_ywdw" />

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_whbz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_whbz" />

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_sbzt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_sbzt" />

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_zcxz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_zcxz" />

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_zcdw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_zcdw" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_dqtz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_dqtz" />

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_tyrq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_tyrq" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_damc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_damc" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_jgxs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_jgxs" />

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_xgfs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_xgfs" />

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/insc_dlsd_jmlx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_jmlx" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_dmcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_dmcc" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_jsl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="true"
                        edcollection:ewidget_inputCom_title="@string/dlsd_jsl"
                        edcollection:ewidget_inputCom_unit="个" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_sgdw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_sgdw" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_jgrq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_jgrq" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_tzbh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_tzbh" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_zyfl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_zyfl" />

                    <com.winway.android.ewidgets.input.InputSelectComponent
                        android:id="@+id/insc_dlsd_sfazfhc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputSelect_hint="@string/drop_hint"
                        edcollection:ewidget_inputSelect_title="@string/dlsd_sfazfhc" />

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_sdrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_sdrl" >
                    </com.winway.android.ewidgets.input.InputComponent>

                    <com.winway.android.ewidgets.input.InputComponent
                        android:id="@+id/inCon_dlsd_cgsl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        edcollection:ewidget_inputCom_hint="@string/input"
                        edcollection:ewidget_inputCom_isShowUnit="false"
                        edcollection:ewidget_inputCom_title="@string/dlsd_cgsl" >
                    </com.winway.android.ewidgets.input.InputComponent>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>